set up spinner for filter

--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -6,16 +6,96 @@
     android:layout_height="match_parent"
     tools:context=".FilterActivity">
 
-    <Button
-        android:id="@+id/filter_test_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <View
+        android:id="@+id/filter_heading_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/filter_main_view"
+        android:background="@color/ssBlack"
+        app:layout_constraintVertical_weight="0.1"
+        />
+
+    <ImageView
+        android:id="@+id/filter_heading_view_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/filter_heading_view"
+        app:layout_constraintStart_toStartOf="@+id/filter_heading_view"
+        app:layout_constraintBottom_toBottomOf="@+id/filter_heading_view"
+        app:layout_constraintEnd_toStartOf="@+id/filter_heading_view_label"
+        android:src="@drawable/ic_keyboard_backspace_24px"
+        android:tint="@color/ssWhite"
+        app:layout_constraintHorizontal_bias="0.3"
+        />
+
+    <TextView
+        android:id="@+id/filter_heading_view_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/filter_heading_view"
+        app:layout_constraintStart_toStartOf="@+id/filter_heading_view"
+        app:layout_constraintEnd_toEndOf="@+id/filter_heading_view"
+        app:layout_constraintBottom_toBottomOf="@+id/filter_heading_view"
+        android:text="Filter"
+        android:textColor="@color/ssWhite"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        />
+
+    <View
+        android:id="@+id/filter_main_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/filter_heading_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="test"
         android:background="@color/ssBrown"
+        app:layout_constraintVertical_weight="0.9"
+        />
+
+    <TextView
+        android:id="@+id/filter_main_view_heading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/filter_main_view"
+        app:layout_constraintStart_toStartOf="@+id/filter_main_view"
+        app:layout_constraintEnd_toEndOf="@+id/filter_main_view"
+        android:layout_marginTop="20dp"
+        android:text="Sort by: "
+        android:textColor="@color/ssWhite"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        />
+
+    <Spinner
+        android:id="@+id/filter_main_view_drop_down"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/filter_main_view_heading"
+        app:layout_constraintStart_toStartOf="@id/filter_main_view"
+        app:layout_constraintEnd_toEndOf="@id/filter_main_view"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        style="@style/spinner_style"
+        android:overlapAnchor="false"
+        />
+
+    <ImageView
+        android:id="@+id/filter_main_view_drop_down_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/filter_main_view_drop_down"
+        app:layout_constraintBottom_toBottomOf="@+id/filter_main_view_drop_down"
+        app:layout_constraintEnd_toEndOf="@+id/filter_main_view_drop_down"
+        app:layout_constraintStart_toStartOf="@+id/filter_main_view_drop_down"
+        app:layout_constraintHorizontal_bias="0.9"
+        android:src="@drawable/ic_arrow_drop_down_24px"
+        android:tint="@color/ssWhite"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
