--- a/app/src/main/res/layout/custom_spinner_item_two.xml
+++ b/app/src/main/res/layout/custom_spinner_item_two.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/ssBlack"
+    >
 
     <TextView
         android:id="@+id/custom_spinner_text_view"
@@ -13,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textColor="@color/ssRed"
+        android:textColor="@color/ssWhite"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
