--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FilterActivity">
+    tools:context=".FilterActivity"
+    android:id="@+id/activity_filter_layout"
+    >
 
     <View
         android:id="@+id/filter_heading_view"
@@ -71,16 +73,56 @@
         android:textStyle="bold"
         />
 
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/filter_main_view_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/filter_main_view_heading"
+        app:layout_constraintStart_toStartOf="@id/filter_main_view"
+        app:layout_constraintEnd_toEndOf="@id/filter_main_view"
+        android:textOff="@string/filter"
+        android:textOn="@string/custom"
+        android:thumb="@drawable/sw_thumb"
+        app:track="@drawable/sw_track"
+        app:showText="true"
+        app:switchTextAppearance="@style/SwitchTextAppearance"
+        />
+
+    <TextView
+        android:id="@+id/dashboard_map_toggle_switch_map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/filter_main_view_switch"
+        app:layout_constraintBottom_toBottomOf="@+id/filter_main_view_switch"
+        app:layout_constraintEnd_toEndOf="@+id/filter_main_view_switch"
+        app:layout_constraintStart_toEndOf="@+id/dashboard_map_toggle_switch_list"
+        android:text="@string/custom"
+        android:textColor="@color/ssBlack"
+        />
+
+    <TextView
+        android:id="@+id/dashboard_map_toggle_switch_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/filter_main_view_switch"
+        app:layout_constraintBottom_toBottomOf="@+id/filter_main_view_switch"
+        app:layout_constraintStart_toStartOf="@+id/filter_main_view_switch"
+        app:layout_constraintEnd_toStartOf="@+id/dashboard_map_toggle_switch_map"
+        android:text="@string/filter"
+        android:textColor="@color/ssBlack"
+        />
+
     <Spinner
         android:id="@+id/filter_main_view_drop_down"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/filter_main_view_heading"
+        app:layout_constraintTop_toBottomOf="@+id/filter_main_view_switch"
         app:layout_constraintStart_toStartOf="@id/filter_main_view"
         app:layout_constraintEnd_toEndOf="@id/filter_main_view"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         style="@style/spinner_style"
         android:overlapAnchor="false"
         />
@@ -97,5 +139,35 @@
         android:src="@drawable/ic_arrow_drop_down_24px"
         android:tint="@color/ssBlack"
         />
+
+    <!-- Custom Filter -->
+
+    <Spinner
+        android:id="@+id/filter_main_view_drop_down_custom_bench"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/filter_main_view_switch"
+        app:layout_constraintStart_toStartOf="@id/filter_main_view"
+        app:layout_constraintEnd_toEndOf="@id/filter_main_view"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        style="@style/spinner_style"
+        android:overlapAnchor="false"
+        />
+
+    <ImageView
+        android:id="@+id/filter_main_view_drop_down_custom_bench_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/filter_main_view_drop_down_custom_bench"
+        app:layout_constraintBottom_toBottomOf="@+id/filter_main_view_drop_down_custom_bench"
+        app:layout_constraintEnd_toEndOf="@+id/filter_main_view_drop_down_custom_bench"
+        app:layout_constraintStart_toStartOf="@+id/filter_main_view_drop_down_custom_bench"
+        app:layout_constraintHorizontal_bias="0.9"
+        android:src="@drawable/ic_arrow_drop_down_24px"
+        android:tint="@color/ssBlack"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
