--- a/app/src/main/res/layout/activity_league_table_results.xml
+++ b/app/src/main/res/layout/activity_league_table_results.xml
@@ -115,7 +115,7 @@
         app:layout_constraintTop_toBottomOf="@+id/league_table_results_main_view_sort_label"
         app:layout_constraintStart_toStartOf="@+id/league_table_results_main_view"
         app:layout_constraintEnd_toEndOf="@+id/league_table_results_main_view"
-        android:text="All lifts"
+        android:text="All"
         android:textColor="@color/ssWhite"
         android:textSize="18sp"
         android:textStyle="bold"
