--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -261,7 +261,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:background="@drawable/white_border"
-        android:backgroundTint="@color/ssGreen"
+        android:backgroundTint="@color/ssBlack"
         android:text="Submit"
         android:textAllCaps="false"
         android:textColor="@color/ssWhite"
