--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -66,6 +66,7 @@
         app:layout_constraintTop_toTopOf="@+id/filter_main_view"
         app:layout_constraintStart_toStartOf="@+id/filter_main_view"
         app:layout_constraintEnd_toEndOf="@+id/filter_main_view"
+        app:layout_constraintBottom_toTopOf="@+id/filter_main_view_drop_down"
         android:layout_marginTop="20dp"
         android:text="Sort by: "
         android:textColor="@color/ssWhite"
@@ -87,6 +88,7 @@
         app:track="@drawable/sw_track"
         app:showText="true"
         app:switchTextAppearance="@style/SwitchTextAppearance"
+        android:visibility="gone"
         />
 
     <TextView
@@ -99,6 +101,7 @@
         app:layout_constraintStart_toEndOf="@+id/dashboard_map_toggle_switch_list"
         android:text="@string/custom"
         android:textColor="@color/ssBlack"
+        android:visibility="gone"
         />
 
     <TextView
@@ -111,20 +114,23 @@
         app:layout_constraintEnd_toStartOf="@+id/dashboard_map_toggle_switch_map"
         android:text="@string/filter"
         android:textColor="@color/ssBlack"
+        android:visibility="gone"
         />
 
     <Spinner
         android:id="@+id/filter_main_view_drop_down"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/filter_main_view_switch"
+        app:layout_constraintTop_toBottomOf="@+id/filter_main_view_heading"
         app:layout_constraintStart_toStartOf="@id/filter_main_view"
         app:layout_constraintEnd_toEndOf="@id/filter_main_view"
+        app:layout_constraintBottom_toTopOf="@id/filter_main_view_submit_btn"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         style="@style/spinner_style"
         android:overlapAnchor="false"
+        app:layout_constraintVertical_chainStyle="packed"
         />
 
     <ImageView
@@ -149,11 +155,14 @@
         app:layout_constraintTop_toBottomOf="@+id/filter_main_view_switch"
         app:layout_constraintStart_toStartOf="@id/filter_main_view"
         app:layout_constraintEnd_toEndOf="@id/filter_main_view"
+        app:layout_constraintBottom_toTopOf="@id/filter_main_view_submit_btn"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="50dp"
         style="@style/spinner_style"
         android:overlapAnchor="false"
+        android:visibility="gone"
         />
 
     <ImageView
@@ -167,6 +176,7 @@
         app:layout_constraintHorizontal_bias="0.9"
         android:src="@drawable/ic_arrow_drop_down_24px"
         android:tint="@color/ssBlack"
+        android:visibility="gone"
         />
 
     <Spinner
@@ -181,6 +191,7 @@
         android:layout_marginTop="20dp"
         style="@style/spinner_style"
         android:overlapAnchor="false"
+        android:visibility="gone"
         />
 
     <ImageView
@@ -194,6 +205,7 @@
         app:layout_constraintHorizontal_bias="0.9"
         android:src="@drawable/ic_arrow_drop_down_24px"
         android:tint="@color/ssBlack"
+        android:visibility="gone"
         />
 
     <Spinner
@@ -208,6 +220,7 @@
         android:layout_marginTop="20dp"
         style="@style/spinner_style"
         android:overlapAnchor="false"
+        android:visibility="gone"
         />
 
     <ImageView
@@ -221,6 +234,7 @@
         app:layout_constraintHorizontal_bias="0.9"
         android:src="@drawable/ic_arrow_drop_down_24px"
         android:tint="@color/ssBlack"
+        android:visibility="gone"
         />
 
     <Spinner
@@ -235,6 +249,7 @@
         android:layout_marginTop="20dp"
         style="@style/spinner_style"
         android:overlapAnchor="false"
+        android:visibility="gone"
         />
 
     <ImageView
@@ -248,16 +263,17 @@
         app:layout_constraintHorizontal_bias="0.9"
         android:src="@drawable/ic_arrow_drop_down_24px"
         android:tint="@color/ssBlack"
+        android:visibility="gone"
         />
 
     <Button
         android:id="@+id/filter_main_view_submit_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/filter_main_view_drop_down_custom_ohp"
+        app:layout_constraintTop_toBottomOf="@+id/filter_main_view_drop_down"
         app:layout_constraintStart_toStartOf="@id/filter_main_view"
         app:layout_constraintEnd_toEndOf="@id/filter_main_view"
-        app:layout_constraintBottom_toBottomOf="@id/filter_main_view"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:background="@drawable/white_border"
