--- a/app/src/main/res/layout/activity_league_table_results.xml
+++ b/app/src/main/res/layout/activity_league_table_results.xml
@@ -128,13 +128,11 @@
         app:layout_constraintTop_toBottomOf="@+id/league_table_results_main_view_sort_result"
         app:layout_constraintStart_toStartOf="@+id/league_table_results_main_view"
         app:layout_constraintEnd_toEndOf="@+id/league_table_results_main_view"
-        app:layout_constraintBottom_toBottomOf="@+id/league_table_results_main_view"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
