--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -22,12 +22,24 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/profile_image_settings"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:layout_constraintTop_toTopOf="@+id/profile_image_view"
+                app:layout_constraintBottom_toBottomOf="@+id/profile_image_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/profile_image_view"
+                android:src="@drawable/ic_settings_applications_24px"
+                android:tint="@color/ssWhite"
+                />
+
+            <ImageView
                 android:id="@+id/profile_image_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/profile_back_btn"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/profile_image_settings"
                 android:src="@mipmap/ic_log_in_bear"
                 android:textSize="30sp"
                 android:textStyle="bold"
