cleaning up some strings

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -31,7 +31,7 @@
                 app:layout_constraintStart_toEndOf="@+id/profile_image_view"
                 android:src="@drawable/ic_settings_applications_24px"
                 android:tint="@color/ssWhite"
-                />
+                android:contentDescription="@string/app_name" />
 
             <ImageView
                 android:id="@+id/profile_image_view"
@@ -68,7 +68,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/profile_image_view"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="Profile"
+                android:text="@string/profile"
                 android:textColor="@color/ssWhite"
                 android:textSize="30sp"
                 android:layout_marginEnd="20dp"
@@ -85,7 +85,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/profile_heading"
                 app:layout_constraintHorizontal_bias="0"
                 android:layout_marginTop="10dp"
-                android:text="Gym name"
+                android:text="@string/gym_name"
                 android:textColor="@color/ssWhite"
                 android:textSize="20sp"
                 android:textAlignment="center"
@@ -100,7 +100,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/profile_heading"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/white_border"
-                android:hint="Gym name"
+                android:hint="@string/gym_name"
                 android:shadowColor="@color/ssBlack"
                 android:textColor="@color/ssBlack"
                 android:textAlignment="textStart"
@@ -120,7 +120,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/profile_heading"
                 app:layout_constraintHorizontal_bias="0"
                 android:layout_marginTop="20dp"
-                android:text="Bench press (kg)"
+                android:text="@string/bench_press_kg"
                 android:textColor="@color/ssWhite"
                 android:textSize="20sp"
                 android:textAlignment="center"
@@ -134,7 +134,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/profile_heading"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/white_border"
-                android:hint="Bench press"
+                android:hint="@string/bench_press"
                 android:shadowColor="@color/ssBlack"
                 android:textColor="@color/ssBlack"
                 android:textAlignment="textStart"
@@ -154,7 +154,7 @@
                 app:layout_constraintEnd_toEndOf="@id/profile_heading"
                 app:layout_constraintHorizontal_bias="0"
                 android:layout_marginTop="20dp"
-                android:text="Squat (kg)"
+                android:text="@string/squat_kg"
                 android:textColor="@color/ssWhite"
                 android:textSize="20sp"
                 android:textAlignment="center"
@@ -169,7 +169,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/profile_heading"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/white_border"
-                android:hint="Squat"
+                android:hint="@string/squat"
                 android:shadowColor="@color/ssBlack"
                 android:textColor="@color/ssBlack"
                 android:textAlignment="textStart"
@@ -189,7 +189,7 @@
                 app:layout_constraintEnd_toEndOf="@id/profile_heading"
                 app:layout_constraintHorizontal_bias="0"
                 android:layout_marginTop="20dp"
-                android:text="Deadlift (kg)"
+                android:text="@string/deadlift_kg"
                 android:textColor="@color/ssWhite"
                 android:textSize="20sp"
                 android:textAlignment="center"
@@ -204,7 +204,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/profile_heading"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/white_border"
-                android:hint="Deadlift"
+                android:hint="@string/deadlift"
                 android:shadowColor="@color/ssBlack"
                 android:textColor="@color/ssBlack"
                 android:textAlignment="textStart"
@@ -224,7 +224,7 @@
                 app:layout_constraintEnd_toEndOf="@id/profile_heading"
                 app:layout_constraintHorizontal_bias="0"
                 android:layout_marginTop="20dp"
-                android:text="Over Head Press (kg)"
+                android:text="@string/over_head_press_kg"
                 android:textColor="@color/ssWhite"
                 android:textSize="20sp"
                 android:textAlignment="center"
@@ -239,7 +239,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/profile_heading"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/white_border"
-                android:hint="Deadlift"
+                android:hint="@string/over_head_press_kg"
                 android:shadowColor="@color/ssBlack"
                 android:textColor="@color/ssBlack"
                 android:textAlignment="textStart"
@@ -248,7 +248,7 @@
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 android:inputType="numberDecimal"
-                />
+                android:autofillHints="@string/over_head_press_kg" />
 
             <Button
                 android:id="@+id/profile_save_btn"
@@ -260,7 +260,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
-                android:text="Submit"
+                android:text="@string/submit"
                 android:textColor="@color/ssWhite"
                 android:textStyle="bold"
                 android:background="@drawable/white_border"
@@ -292,7 +292,7 @@
                 app:layout_constraintEnd_toEndOf="@id/profile_heading"
                 app:layout_constraintStart_toEndOf="@+id/profile_save_btn"
                 android:layout_marginStart="10dp"
-                android:text="Log out"
+                android:text="@string/log_out"
                 android:textColor="@color/ssWhite"
                 android:textStyle="bold"
                 android:background="@drawable/white_border"
