--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -251,6 +251,24 @@
                 android:autofillHints="@string/over_head_press_kg" />
 
             <Button
+                android:id="@+id/profile_claim_btn"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/profile_sub_heading_ohp_input"
+                app:layout_constraintStart_toStartOf="@id/profile_heading"
+                app:layout_constraintEnd_toStartOf="@+id/profile_sign_out_btn"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:text="@string/claim"
+                android:textColor="@color/ssWhite"
+                android:textStyle="bold"
+                android:background="@drawable/white_border"
+                android:backgroundTint="@color/ssGreen"
+                android:textAllCaps="false"
+                />
+
+            <Button
                 android:id="@+id/profile_save_btn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -266,6 +284,7 @@
                 android:background="@drawable/white_border"
                 android:backgroundTint="@color/ssBrown"
                 android:textAllCaps="false"
+
                 />
 
             <ProgressBar
@@ -291,7 +310,6 @@
                 app:layout_constraintBottom_toBottomOf="@+id/profile_save_btn"
                 app:layout_constraintEnd_toEndOf="@id/profile_heading"
                 app:layout_constraintStart_toEndOf="@+id/profile_save_btn"
-                android:layout_marginStart="10dp"
                 android:text="@string/log_out"
                 android:textColor="@color/ssWhite"
                 android:textStyle="bold"
