--- a/app/src/main/res/layout/activity_prove_lift.xml
+++ b/app/src/main/res/layout/activity_prove_lift.xml
@@ -62,6 +62,7 @@
         />
 
     <Button
+        android:id="@+id/prove_lift_submit_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/prove_lift_link_input"
