--- a/app/src/main/res/layout/activity_start_states.xml
+++ b/app/src/main/res/layout/activity_start_states.xml
@@ -138,25 +138,38 @@
                 android:textAllCaps="false"
                 />
 
-            <VideoView
-                android:id="@+id/start_states_bench_video"
+            <TextView
+                android:id="@+id/start_states_bench_proof_link"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@+id/start_states_bench_proof_input"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/start_states_bench_proof_input"
                 app:layout_constraintStart_toStartOf="@+id/start_states_heading"
+                app:layout_constraintEnd_toStartOf="@+id/start_states_bench_proof_link_remove"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/ssWhite"
+                android:text="text"
+                />
+
+            <ImageView
+                android:id="@+id/start_states_bench_proof_link_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/start_states_bench_proof_link"
                 app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
-                app:layout_constraintBottom_toTopOf="@+id/start_states_squat_label"
-                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toEndOf="@+id/start_states_bench_proof_link"
+                android:src="@drawable/ic_clear_24px"
+                android:background="@color/ssWhite"
+                android:backgroundTint="@color/ssBackgroundBlack"
+                android:tint="@color/ssRed"
                 />
 
             <TextView
                 android:id="@+id/start_states_squat_label"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/start_states_bench_video"
+                app:layout_constraintTop_toBottomOf="@+id/start_states_bench_proof_link"
                 app:layout_constraintStart_toStartOf="@id/start_states_heading"
                 app:layout_constraintEnd_toEndOf="@id/start_states_heading"
-
                 app:layout_constraintHorizontal_bias="0"
                 android:layout_marginTop="20dp"
                 android:text="Squat (kg)"
@@ -171,6 +184,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/start_states_squat_label"
                 app:layout_constraintStart_toStartOf="@+id/start_states_heading"
                 app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
+                app:layout_constraintBottom_toTopOf="@+id/start_states_squat_proof_label"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/white_border"
                 android:hint="Squat"
@@ -184,43 +198,56 @@
                 android:inputType="numberDecimal"
                 />
 
-            <TextView
+            <Button
                 android:id="@+id/start_states_squat_proof_label"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/start_states_squat_input"
                 app:layout_constraintStart_toStartOf="@+id/start_states_heading"
                 app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
                 android:layout_marginTop="20dp"
-                android:text="Squat Proof Link"
-                android:textColor="@color/ssBrown"
-                android:textSize="20sp"
-                app:layout_constraintHorizontal_bias="0"
-                android:inputType="textWebEditText"
-                />
-
-            <EditText
-                android:id="@+id/start_states_squat_proof_input"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/start_states_squat_proof_label"
-                app:layout_constraintStart_toStartOf="@+id/start_states_heading"
-                app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
-                android:shadowColor="@color/ssBlack"
-                android:textColor="@color/ssBlack"
-                android:textAlignment="textStart"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 android:background="@drawable/white_border"
+                android:backgroundTint="@color/ssBrown"
+                android:text="Get Squat Proof"
+                android:textColor="@color/ssWhite"
+                android:textAllCaps="false"
+                app:layout_constraintHorizontal_bias="0"
+                />
+
+            <TextView
+                android:id="@+id/start_states_squat_proof_link"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/start_states_squat_proof_label"
+                app:layout_constraintStart_toStartOf="@+id/start_states_heading"
+                app:layout_constraintEnd_toStartOf="@+id/start_states_squat_proof_link_remove"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/ssWhite"
+                android:text="text"
+                />
+
+            <ImageView
+                android:id="@+id/start_states_squat_proof_link_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/start_states_squat_proof_link"
+                app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
+                app:layout_constraintStart_toEndOf="@+id/start_states_squat_proof_link"
+                android:src="@drawable/ic_clear_24px"
+                android:background="@color/ssWhite"
+                android:backgroundTint="@color/ssBackgroundBlack"
+                android:tint="@color/ssRed"
                 />
 
             <TextView
                 android:id="@+id/start_states_deadlift_label"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/start_states_squat_proof_input"
+                app:layout_constraintTop_toBottomOf="@+id/start_states_squat_proof_link"
                 app:layout_constraintStart_toStartOf="@id/start_states_heading"
                 app:layout_constraintEnd_toEndOf="@id/start_states_heading"
                 app:layout_constraintHorizontal_bias="0"
@@ -250,43 +277,57 @@
                 android:inputType="numberDecimal"
                 />
 
-            <TextView
+            <Button
                 android:id="@+id/start_states_deadlift_proof_label"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/start_states_deadlift_input"
                 app:layout_constraintStart_toStartOf="@+id/start_states_heading"
                 app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
                 android:layout_marginTop="20dp"
-                android:text="Deadlift Proof Link"
-                android:textColor="@color/ssBrown"
-                android:textSize="20sp"
-                app:layout_constraintHorizontal_bias="0"
-                android:inputType="textWebEditText"
-                />
-
-            <EditText
-                android:id="@+id/start_states_deadlift_proof_input"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/start_states_deadlift_proof_label"
-                app:layout_constraintStart_toStartOf="@+id/start_states_heading"
-                app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
-                android:shadowColor="@color/ssBlack"
-                android:textColor="@color/ssBlack"
-                android:textAlignment="textStart"
+                android:text="Get Deadlift Proof"
+                android:textColor="@color/ssWhite"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 android:background="@drawable/white_border"
+                android:backgroundTint="@color/ssBrown"
+                app:layout_constraintHorizontal_bias="0"
+                android:textAllCaps="false"
                 />
+
+            <TextView
+                android:id="@+id/start_states_deadlift_proof_link"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/start_states_deadlift_proof_label"
+                app:layout_constraintStart_toStartOf="@+id/start_states_heading"
+                app:layout_constraintEnd_toStartOf="@+id/start_states_deadlift_proof_link_remove"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/ssWhite"
+                android:text="text"
+                />
+
+            <ImageView
+                android:id="@+id/start_states_deadlift_proof_link_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/start_states_deadlift_proof_link"
+                app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
+                app:layout_constraintStart_toEndOf="@+id/start_states_deadlift_proof_link"
+                android:src="@drawable/ic_clear_24px"
+                android:background="@color/ssWhite"
+                android:backgroundTint="@color/ssBackgroundBlack"
+                android:tint="@color/ssRed"
+                />
+
 
             <TextView
                 android:id="@+id/start_states_ohp_label"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/start_states_deadlift_proof_input"
+                app:layout_constraintTop_toBottomOf="@+id/start_states_deadlift_proof_link"
                 app:layout_constraintStart_toStartOf="@id/start_states_heading"
                 app:layout_constraintEnd_toEndOf="@id/start_states_heading"
                 app:layout_constraintHorizontal_bias="0"
@@ -316,43 +357,56 @@
                 android:inputType="numberDecimal"
                 />
 
-            <TextView
+            <Button
                 android:id="@+id/start_states_ohp_proof_label"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/start_states_ohp_input"
                 app:layout_constraintStart_toStartOf="@+id/start_states_heading"
                 app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
                 android:layout_marginTop="20dp"
                 android:text="Over Head Press Proof Link"
-                android:textColor="@color/ssBrown"
-                android:textSize="20sp"
-                app:layout_constraintHorizontal_bias="0"
-                android:inputType="textWebEditText"
-                />
-
-            <EditText
-                android:id="@+id/start_states_ohp_proof_input"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/start_states_ohp_proof_label"
-                app:layout_constraintStart_toStartOf="@+id/start_states_heading"
-                app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
-                android:shadowColor="@color/ssBlack"
-                android:textColor="@color/ssBlack"
-                android:textAlignment="textStart"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 android:background="@drawable/white_border"
+                android:backgroundTint="@color/ssBrown"
+                android:textColor="@color/ssBrown"
+                android:textAllCaps="false"
+                app:layout_constraintHorizontal_bias="0"
+                />
+
+            <TextView
+                android:id="@+id/start_states_ohp_proof_link"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/start_states_ohp_proof_label"
+                app:layout_constraintStart_toStartOf="@+id/start_states_heading"
+                app:layout_constraintEnd_toStartOf="@+id/start_states_ohp_proof_link_remove"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/ssWhite"
+                android:text="text"
+                />
+
+            <ImageView
+                android:id="@+id/start_states_ohp_proof_link_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/start_states_ohp_proof_link"
+                app:layout_constraintEnd_toEndOf="@+id/start_states_heading"
+                app:layout_constraintStart_toEndOf="@+id/start_states_ohp_proof_link"
+                android:src="@drawable/ic_clear_24px"
+                android:background="@color/ssWhite"
+                android:backgroundTint="@color/ssBackgroundBlack"
+                android:tint="@color/ssRed"
                 />
 
             <Button
                 android:id="@+id/start_states_ohp_submit_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/start_states_ohp_proof_input"
+                app:layout_constraintTop_toBottomOf="@+id/start_states_ohp_proof_link"
                 app:layout_constraintStart_toStartOf="@id/start_states_heading"
                 app:layout_constraintEnd_toEndOf="@id/start_states_heading"
                 app:layout_constraintBottom_toBottomOf="parent"
