--- a/app/src/main/res/layout/custom_bench_video.xml
+++ b/app/src/main/res/layout/custom_bench_video.xml
@@ -12,22 +12,63 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/custom_bench_video_cancel"
         />
 
-   <!-- <Button
-        android:id="@+id/custom_bench_video_cancel"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <Button
+        android:id="@+id/custom_bench_video_restart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/custom_bench_video_pause"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/custom_bench_video_proof"
+        android:background="@color/ssBrown"
+        android:text="Restart"
+        android:textColor="@color/ssWhite"
+        android:textAllCaps="false"
+        />
+
+    <Button
+        android:id="@+id/custom_bench_video_pause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/custom_bench_video_restart"
+        app:layout_constraintEnd_toStartOf="@+id/custom_bench_video_play"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/custom_bench_video_proof"
+        android:background="@color/ssBrown"
+        android:text="Pause"
+        android:textColor="@color/ssWhite"
+        android:textAllCaps="false"
+        />
+
+    <Button
+        android:id="@+id/custom_bench_video_play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/custom_bench_video_pause"
+        app:layout_constraintEnd_toStartOf="@+id/custom_bench_video_cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/custom_bench_video_proof"
+        android:background="@color/ssBrown"
+        android:text="Play"
+        android:textColor="@color/ssWhite"
+        android:textAllCaps="false"
+        />
+
+    <Button
+        android:id="@+id/custom_bench_video_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/custom_bench_video_play"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/custom_bench_video_proof"
-        android:text="Cancel"
-        />-->
+        android:background="@color/ssBrown"
+        android:text="Close"
+        android:textColor="@color/ssWhite"
+        android:textAllCaps="false"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
