--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -242,7 +242,7 @@
                 android:paddingBottom="6dp"
                 android:background="@drawable/white_border"
                 android:backgroundTint="@color/ssBrown"
-                android:text="Get Bench Proof"
+                android:text="Get Squat Proof"
                 android:textAllCaps="false"
                 />
 
@@ -323,7 +323,7 @@
                 android:paddingBottom="6dp"
                 android:background="@drawable/white_border"
                 android:backgroundTint="@color/ssBrown"
-                android:text="Get Bench Proof"
+                android:text="Get Deadlift Proof"
                 android:textAllCaps="false"
                 />
 
@@ -388,13 +388,59 @@
                 android:inputType="numberDecimal"
                 android:autofillHints="@string/over_head_press_kg" />
 
+            <Button
+                android:id="@+id/profile_ohp_proof_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/profile_sub_heading_ohp_input"
+                app:layout_constraintStart_toStartOf="@+id/profile_heading"
+                app:layout_constraintEnd_toEndOf="@+id/profile_heading"
+                android:shadowColor="@color/ssBlack"
+                android:textColor="@color/ssWhite"
+                android:layout_marginTop="20dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:background="@drawable/white_border"
+                android:backgroundTint="@color/ssBrown"
+                android:text="Get OHP Proof"
+                android:textAllCaps="false"
+                />
+
+            <TextView
+                android:id="@+id/profile_ohp_proof_link"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/profile_ohp_proof_input"
+                app:layout_constraintStart_toStartOf="@+id/profile_heading"
+                app:layout_constraintEnd_toStartOf="@+id/profile_ohp_proof_link_remove"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/ssWhite"
+                android:textAlignment="center"
+                android:text="text"
+                />
+
+            <ImageView
+                android:id="@+id/profile_ohp_proof_link_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/profile_ohp_proof_link"
+                app:layout_constraintEnd_toEndOf="@+id/profile_heading"
+                app:layout_constraintStart_toEndOf="@+id/profile_ohp_proof_link"
+                android:src="@drawable/ic_clear_24px"
+                android:background="@color/ssWhite"
+                android:backgroundTint="@color/ssBackgroundBlack"
+                android:tint="@color/ssRed"
+                />
+
 
 
             <Button
                 android:id="@+id/profile_claim_btn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@id/profile_sub_heading_ohp_input"
+                app:layout_constraintTop_toBottomOf="@+id/profile_ohp_proof_link"
                 app:layout_constraintStart_toStartOf="@id/profile_heading"
                 app:layout_constraintEnd_toStartOf="@+id/profile_sign_out_btn"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -412,7 +458,7 @@
                 android:id="@+id/profile_save_btn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@id/profile_sub_heading_ohp_input"
+                app:layout_constraintTop_toBottomOf="@+id/profile_ohp_proof_link"
                 app:layout_constraintStart_toStartOf="@id/profile_heading"
                 app:layout_constraintEnd_toStartOf="@+id/profile_sign_out_btn"
                 app:layout_constraintBottom_toBottomOf="parent"
